# DashboardService/src/main/java/com/Microservices/DashboardService/schemas/SpecialPoints.java
@@ -13,13 +13,10 @@ import lombok.Setter;
 
 @Entity
 @Table(name = "dtm_specialpoints", schema = "terraintwinv2")
-@SQLInsert(sql = "INSERT INTO terraintwinv2.dtm_specialpoints (geometry, origin_id, tin_id, id) VALUES (ST_Transform(ST_GeomFromEWKT(?),25832),?,?,?)" )
+@SQLInsert(sql = "INSERT INTO terraintwinv2.dtm_specialpoints (geometry, tin_id, id) VALUES (ST_Transform(ST_GeomFromEWKT(?),25832),?,?)" )
 @Getter
 @Setter
 public class SpecialPoints extends PostgresTables {
-
-    @Column
-    protected int origin_id;
 
     @Column(name="tin_id", nullable=false)
     private UUID tin_id;
@@ -28,8 +25,7 @@ public class SpecialPoints extends PostgresTables {
 
     }
     
-    public SpecialPoints(int origin_id, UUID tin_id, String geometry){
-        this.origin_id = origin_id;
+    public SpecialPoints(UUID tin_id, String geometry){
         this.tin_id = tin_id;
         this.geometry = geometry;
     }
