# PostgresImportService/src/main/java/com/Microservices/PostgresImportService/schemas/SpecialPoints.java
@@ -11,15 +11,13 @@ import org.hibernate.annotations.SQLInsert;
 import lombok.Getter;
 import lombok.Setter;
 
-@Entity
+@Entity(name = "terraintwinv2.dtm_specialpoints")
 @Table(name = "dtm_specialpoints", schema = "terraintwinv2")
-@SQLInsert(sql = "INSERT INTO terraintwinv2.dtm_specialpoints (geometry, origin_id, tin_id, id) VALUES (ST_Transform(ST_GeomFromEWKT(?),25832),?,?,?)" )
+@SQLInsert(sql = "INSERT INTO terraintwinv2.dtm_specialpoints (geometry, tin_id, id) VALUES (ST_Transform(ST_GeomFromEWKT(?),25832),?,?)" )
 @Getter
 @Setter
 public class SpecialPoints extends PostgresTables {
 
-    @Column
-    protected int origin_id;
 
     @Column(name="tin_id", nullable=false)
     private UUID tin_id;
@@ -28,8 +26,7 @@ public class SpecialPoints extends PostgresTables {
 
     }
     
-    public SpecialPoints(int origin_id, UUID tin_id, String geometry){
-        this.origin_id = origin_id;
+    public SpecialPoints(UUID tin_id, String geometry){
         this.tin_id = tin_id;
         this.geometry = geometry;
     }
