# PostgresImportService/src/main/resources/static/openapi.yml
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  title: PostgreSQL Import API
+  title: PostgreSQL Import/Export API
   description: Documentation of PostgreSQL Import and Export.
   license:
     name: Apache 2.0
@@ -30,6 +30,24 @@ paths:
         required: true
         schema:
           type: string
+      responses:
+        200:
+          description: successful operation
+  /:
+    get:
+      tags:
+      - Export
+      summary: Landing page
+      operationId: landing-page
+      responses:
+        200:
+          description: successful operation
+  /conformance:
+    get:
+      tags:
+      - Export
+      summary: Get conformance information
+      operationId: conformance
       responses:
         200:
           description: successful operation
@@ -81,28 +99,58 @@ paths:
       summary: Export DGM by ID
       operationId: dgm-export
       parameters:
-      - name: id
+      - name: collectionId
         in: path
-        description: The unique id of the DGM geometry.
+        description: The unique id of the collection.
+        required: true
+        schema:
+          type: string
+      - name: featureId
+        in: path
+        description: The unique id of the geometry.
         required: true
         schema:
           type: string
       responses:
         200:
           description: successful operation
-  /postgres/dtm_tin/id/{id}:
-    get:
-      tags:
-      - Export
-      summary: Export DGM by ID
-      operationId: dgm-export
-      parameters:
-      - name: id
-        in: path
-        description: The unique id of the DGM geometry.
-        required: true
-        schema:
+          content:
+            # application/geo+json:
+            #   schema: 
+            #     $ref: '#/components/schemas/geoObject'
+              # example:
+              #   id: 00d57a7b-1aaf-49b8-b910-b6e41b24e3ce
+              #   origin_id: 1234
+              #   geometry: SRID=25832;POINT(685647.538246778 5646639.64492847 0)
+            # text/html:
+            #   schema:
+            #     $ref: '#/components/schemas/geoObject'
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/geoObject'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/geoObject'
+            text/plain:
+              schema:
+                type: string
+            # application/yaml:
+            #   schema:
+            #     $ref: '#/components/schemas/geoObject'
+components:
+  schemas:
+    geoObject:
+      type: object
+      required:
+        - id 
+        - geometry
+      properties: 
+        id:
           type: string
-      responses:
-        200:
-          description: successful operation
+        origin_id:
+          type: integer
+          nullable: true
+        geometry:
+          type: string
+        tin_id:
+          type: string
